making more changes